--- a/_less/screen.less
+++ b/_less/screen.less
@@ -141,6 +141,33 @@ li p{
 	text-decoration:underline;
 }
 
+.foundation-banner{
+	text-align:center;
+}
+.foundation-banner div{
+	display:inline-block;
+	color:#8D8D8D;
+	padding:15px 30px 15px 30px;
+	margin:0 0 20px 0;
+	line-height:2em;
+}
+.foundation-banner a,
+.foundation-banner a:link,
+.foundation-banner a:active,
+.foundation-banner a:visited{
+	color:#666;
+	font-weight:bold;
+	margin-left:6px;
+	white-space:nowrap;
+}
+.foundation-banner img{
+	vertical-align:top;
+	position:relative;
+	top:2px;
+	width:32px;
+	height:32px;
+}
+
 .head{
 	margin:30px 0 30px 0;
 }
@@ -340,7 +367,7 @@ li p{
 	position:relative;
 	top:-2px;
 	padding:20px 0 20px 40px;
-	text-align:left;
+	text-align:center;
 	font-size:94%;
 	max-width:940px;
 }
@@ -350,10 +377,6 @@ li p{
 .footer div a{
 	margin-right:15px;
 	white-space:nowrap;
-}
-.footer div span{
-	margin-top:15px;
-	display:block;
 }
 .footer div span a{
 	margin-right:auto;
