--- a/_less/screen.less
+++ b/_less/screen.less
@@ -368,8 +368,8 @@ li p{
 	top:-2px;
 	padding:20px 0 20px 40px;
 	text-align:center;
-	font-size:94%;
 	max-width:940px;
+	font-size:94%;
 }
 .footer div{
 	padding-top:6px;
@@ -1351,6 +1351,11 @@ h2 .rssicon{
 	.footer{
 		padding:20px 0 20px 5px;
 		background-color:transparent;
+		line-height:1.5em;
+	}
+	.footer div span{
+		display:block;
+		margin-top:10px;
 	}
 	.index{
 		padding:15px;
